@@ -1,3 +1,11 @@
+2006-01-05  thetroublemaker  <thetroublemaker@inventati.org>
+
+	* src/ephy-notebook.c:
+
+	changed ephy_tab_get_title_composite to ephy_tab_get_title,
+	so that now 'Loading ' is not displayed when loadin' a new
+	tab. Bug #323468.
+
 2006-01-08  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/ephy-window.c: (ephy_window_delete_event):
